# nerdpanel

./: Cargo.toml
agent/: Cargo.toml
agent/src/: main.rs  routes.rs  server.rs  utils.rs
common/: Cargo.toml
common/src/: agent_types.rs  lib.rs  models.rs  orch_types.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: utils.ts
frontend/src/lib/components/server_card/: server_card.svelte
frontend/src/lib/components/server_info_card/: server_info_card.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/servers/: +page.svelte  +page.ts
frontend/src/routes/servers/[id]/: +page.svelte  +page.ts
migrations/: 0001_users.sql  0002_nodes-servers.sql
orchestrator/: Cargo.toml
orchestrator/migrations/: 20241023183132_initial.sql  20241023183132_node_server.sql  20241118215306_initial.sql
orchestrator/src/: auth.rs  main.rs
orchestrator/src/models/: mod.rs  node.rs  node_port.rs  pod.rs  server.rs  user.rs
orchestrator/src/routes/: auth.rs  mod.rs  nodes.rs  pod.rs  server.rs  user.rs
orchestrator/src/services/: database.rs
orchestrator/src/utils/: auth.rs  mod.rs
src/: main.rs
src/nodes/: api.rs  mod.rs
src/servers/: api.rs  mod.rs
src/users/: api.rs  auth.rs  mod.rs
