[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.213", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["macros", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-axum = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
