[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["macros", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-axum = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
common = { path = "../common" }
axum_thiserror = "0.1.0"
thiserror = "2.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tracing-appender = "0.2.3"
axum-login = "0.16.0"
password-auth = "1.0.0"
http-body-util = "0.1.2"
